--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,10 @@
         <version>2.1.3.RELEASE</version>
         <relativePath/>
     </parent>
+
     <groupId>com.pubg</groupId>
     <artifactId>analysis</artifactId>
+    <packaging>war</packaging>
     <version>0.0.1-SNAPSHOT</version>
     <name>analysis</name>
     <description>PUBG analysis project for group of four</description>
