--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <project.name>PUBGFourAngryMen</project.name>
         <swagger.version>2.9.2</swagger.version>
         <swagger.ui.version>1.9.3</swagger.ui.version>
+        <crawler.version>1.2.2</crawler.version>
+        <fastjson.version>1.2.68</fastjson.version>
     </properties>
 
     <dependencies>
@@ -68,6 +70,19 @@
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>swagger-bootstrap-ui</artifactId>
             <version>${swagger.ui.version}</version>
+        </dependency>
+
+        <!-- xxl-crawler -->
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-crawler</artifactId>
+            <version>${crawler.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
         </dependency>
     </dependencies>
 
