--- a/src/main/resources/application-remote.yml
+++ b/src/main/resources/application-remote.yml
@@ -22,3 +22,9 @@ mongodb:
   connectTimeout: 10000
   maxWaitTime: 15000
   socketTimeout: 120000
+
+spring:
+  cache:
+    type: ehcache
+    ehcache:
+      config: classpath:ehcache.xml
